# anivault

./: .flutter-plugins-dependencies  .gitignore  .metadata  README.md  build_log.txt  build_log_2.txt  build_release.bat  build_release.ps1  pubspec.yaml  test_shader.glsl
.dart_tool/: package_config.json  package_graph.json
.dart_tool/flutter_build/: dart_plugin_registrant.dart
.dart_tool/flutter_build/0cae0a4ccc97a6462b247bc83f27c940/: .filecache  dart_build.d  dart_build.stamp  dart_build_result.json  debug_bundle_windows-x64_assets.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  native_assets.json  outputs.json  unpack_windows.stamp  (+1 more)
.github/workflows/: android_build.yml  ios_build.yml
android/: .gitignore
android/app/: build.gradle.kts
docs/: DESIGN_GUIDELINES.md  DEVELOPMENT_GUIDELINES.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/services/: anime_library_service.dart  cache_manager_service.dart  ffi_engine.dart  logger_service.dart  shader_service.dart  smb_service.dart
lib/ui/: anime_series_screen.dart  cinematic_edge_bar.dart  downloads_view.dart  glass_controls.dart  home_screen.dart  performance_hud.dart  player_screen.dart  smb_viewer.dart
native/: README.md
native/anivault_core/: .gitignore  Cargo.toml
native/anivault_core/src/: lib.rs  main.rs
native/mpv_smoke/: CMakeLists.txt  main.cpp
test/: anime_filename_parser_test.dart  widget_test.dart
windows/runner/: Runner.rc
(+35 files in other folders)
