[package]
name = "anivault_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "anivault_core"
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "anivault_core_bin"
path = "src/main.rs"

[dependencies]
libmpv = "2.0.1"
libmpv-sys = "3.1.0"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "tracing", "coreml", "directml", "copy-dylibs", "load-dynamic", "api-24"] }
