[package]
name = "anivault_core"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
name = "anivault_core"
crate-type = ["cdylib", "rlib", "staticlib"]


[dependencies]
libmpv = "2.0.1"
libmpv-sys = "3.1.0"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "tracing", "coreml", "directml", "copy-dylibs", "load-dynamic", "api-24"] }
